app/styles/_account.scss
  $mobile-s: new-breakpoint(min-width 320px 12);
  $mobile-m: new-breakpoint(min-width 480px 12);
  $mobile-l: new-breakpoint(min-width 768px 12);
  $desktop: new-breakpoint(min-width 960px 12);


div.user-profile {

  position: absolute;
  top: $std-header-height;
  @include outer-container;
  width: 100%;
  background: $white;

  section {
    padding: 10px;
    border: 2px solid $med-gray;
    margin: 10px;
  }


  h2 {
      text-align:center;
      font-size: 4em;
      font-weight: 300;
      letter-spacing: 0.05em;
      width: 100%;
      background: #aaa;
    }

  section#your-pets {
    @include span-columns(12);

    h3 {
        text-align:center;
        clear:both;
        font-weight:300;
        background: $orange;
        color: $white;
        border-radius: 0.1875em;
       }

    button#add-pet {
      @include media($mobile-s) {
        @include span-columns(4 of 12); @include shift(4 of 12);
      }
      margin:0 0 20px 0;
      position: absolute;
      top: 0;
      right: 50%;
      margin-left: calc(50%-50px);
    }

    div#my-pet-list {
      @include span-columns(12 of 12);
      p.pet-list-name {
        @include media($mobile-s) {
          @include span-columns(2);
          @include shift(0.5);
          clear:left;
        }
      }
      button.your-pet-option   {
        @include media($mobile-s) {
          @include span-columns(2.25);
          @include omega(5n);
          font-size: 0.8em;
        }
      }


      input {
        float: left;
      }
      select {
        float: left;
      }
      textarea {
        float: left;
      }
      span {
        display: inline-block;
        float: left;
      }

      p.help {
          font-size: 0.8em;
          padding: 0 20px 0 20px;
        }
    }
}


div#update-pet {
  overflow-y: auto;
}

  form#add-pet-form {
    @include span-columns(12);

    input, label, select {
      clear: left;
    }


    span{
      float:left;
      padding: 0px 10px 0 10px;
    }

    #p-name {
      @include span-columns(3.5);
      float:left;
    }

    #p-gender {
      @include span-columns(2);
      float:left;
    }

    #p-type {
      @include span-columns(2);
      float:left;
    }

    #p-weight {
      @include span-columns(4.5);
      float:left;
      @include omega;
      span#weight-label {
        @include span-columns(1 of 4.5);
      }
      span.ui-widget {
        @include span-columns(3.5 of 4.5);
          input {
            @include span-columns(1.5 of 3.5);
          }
          a {
            @include span-columns(1 of 3.5);
            @include omega;
            span {
              padding:4px;
            }
          }
        }
      }

    #p-colors {
      @include span-columns(6);
      float:left;
      clear:left;

    }

    #p-breeds {
      @include span-columns(6);
      float:left;
      @include omega();
    }

    #p-body-type {
      @include span-columns(6);
      float:left;

    }

    #p-treats {
      @include span-columns(6);
      float:left;
      @include omega();
    }
    #p-bio {
      @include span-columns(6);
      float:left;
      clear:left;

    }
    #p-dates {
      @include span-columns(6);
      float:left;
      @include omega();
      #p-dob {
        clear:left;
      }

      #p-doa {
        clear:left;
      }

      #p-dod {
        clear:left;
      }
    }
    #p-submit {
      @include span-columns(3);
      @include shift(4.5);
    }
  }
}

#tools {
  #upload-container {
    position: absolute;
    top: 50%;
    width: 320px;
    left: 20%;
    z-index: 2000;
  }
}


button.default {
  background: $orange;
}
button.not-default {
  background: $med-gray;
}

